ReferenceFilterOperation doesn't need to store the FilterEffect https://bugs.webkit.org/show_bug.cgi?id=189904

Reviewed by Dean Jackson.

ReferenceFilterOperation doesn't do anything with m_filterEffect so don't store it.

* platform/graphics/filters/FilterOperation.cpp:
(WebCore::ReferenceFilterOperation::setFilterEffect): Deleted.
* platform/graphics/filters/FilterOperation.h:
(WebCore::ReferenceFilterOperation::filterEffect const): Deleted.
* rendering/CSSFilter.cpp:
(WebCore::CSSFilter::build):


Canonical link: https://commits.webkit.org/204865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236413 268f45cc-cd09-0410-ab3c-d52691b4dbfc